# CUDA

./: .gitignore
computation/0_square_numbers/: CMakeLists.txt  square.cu
computation/1_square_store/: CMakeLists.txt  square_store.cu
computation/2_initialize_to_zero/: CMakeLists.txt  initialize_to_zero.cu
computation/3_unique_id_matrix/: CMakeLists.txt  unique_id_matrix.cu
computation/4_unique_id_1D_matrix/: CMakeLists.txt  unique_id_1D_matrix.cu
computation/5_generic_blocks/: CMakeLists.txt  generic_blocks.cu
computation/6_pairwise_distance/: CMakeLists.txt  pairwise.cu
image_kernels/image_blur/: CMakeLists.txt  blur.cu
shared_memory_blog/basics/: CMakeLists.txt  basics.cu
shared_memory_blog/matmul/: CMakeLists.txt  matmul.cu
